[metadata]
name = apache-airflow-providers-google
version = 2022.5.18+composer
description = Utilities for the Zoro Data Science team.

[options]
packages = airflow
install_requires =
    apache-airflow>=2.2.0
python_requires = >=3.7
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    docs
    tests
